<resources>
    <string name="app_name">UTNPhones</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--LOGIN-->
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="not_registered">¿Es cliente y no está registrado?</string>
    <string name="not_registered2"><u><b>REGISTRARSE</b></u></string>

    <!--REGISTER-->
    <string name="register_title">Registro</string>
    <string name="register_username">Nombre de Usuario</string>
    <string name="register_password">Contraseña</string>
    <string name="register_email">Email</string>
    <string name="register_name">Nombre</string>
    <string name="register_lastname">Apellido</string>
    <string name="register_dni">DNI</string>
    <string name="register_city">Ciudad</string>
    <string name="register_address">Dirección</string>
    <string name="already_registered">¿Ya está registrado?</string>
    <string name="login2"><u><b>INGRESAR</b></u></string>
    <string name="register">REGISTRARSE</string>

    <!--USER FRAGMENT-->
    <string name="card_view_title_holder">TITULAR</string>
    <string name="card_view_title_adress">DOMICILIO</string>
    <string name="card_view_title_user">Usuario:</string>

    <string name="card_view_element_name">Nombre:</string>
    <string name="card_view_element_lastname">Apellido:</string>
    <string name="card_view_element_client">Nº de Cliente:</string>
    <string name="card_view_element_dni">DNI:</string>
    <string name="card_view_element_address">Dirección:</string>
    <string name="card_view_element_city">Localidad:</string>
    <string name="card_view_element_province">Provincia:</string>

    <!--PHONE LINES FRAGMENT-->
    <string name="phone_line_card_title">LINEA</string>
    <string name="card_view_element_number">Número</string>
    <string name="card_view_element_type">Tipo</string>
    <string name="card_view_element_status">Estado</string>

    <!--BILLS FRAGMENT-->
    <string name="no_content_bills">No se encontraron facturas</string>
    <!--BARRA DE MENU LATERAL-->
    <string name="menu_home">Datos Personales</string>
    <string name="menu_phone_lines">Mis Lineas de Teléfono</string>
    <string name="menu_calls">Mis Llamadas</string>

    <string name="home_second">Home Second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
