<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/new_iconapp" />

            <TextView
                android:id="@+id/textViewRegisterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/register_title"
                android:textColor="#000000"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/user_icon" />

                <EditText
                    android:id="@+id/editTextRegisterUsername"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_username"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/password_icon" />

                <EditText
                    android:id="@+id/editTextRegisterPassword"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/icon_email" />

                <EditText
                    android:id="@+id/editTextRegisterEmail"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/name_icon" />

                <EditText
                    android:id="@+id/editTextRegisterName"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/name_icon" />

                <EditText
                    android:id="@+id/editTextRegisterLastname"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_lastname"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/dni_icon" />

                <EditText
                    android:id="@+id/editTextRegisterDni"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_dni"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/city_icon" />

                <Spinner
                    android:id="@+id/citySpinner"
                    android:layout_width="240dp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/address_icon" />

                <EditText
                    android:id="@+id/editTextRegisterAddress"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/register_address"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/login"
                        android:textColor="@android:color/widget_edittext_dark"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewNotRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/already_registered"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textViewNotRegistered2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat"
                android:onClick="login_activity"
                android:text="@string/login"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNotRegistered" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>