<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewHome"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="9dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textValueStatus"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_span="1"
            android:fontFamily="@font/montserrat"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleStatus" />

        <TextView
            android:id="@+id/textTitleStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/card_view_element_status"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textValueType" />

        <TextView
            android:id="@+id/textValueType"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_span="1"
            android:fontFamily="@font/montserrat"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleType" />

        <TextView
            android:id="@+id/textTitleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/card_view_element_type"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textValueNumber" />

        <TextView
            android:id="@+id/textValueNumber"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_span="1"
            android:fontFamily="@font/montserrat"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleNumber" />

        <TextView
            android:id="@+id/textTitleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/card_view_element_number"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitlePhoneLine" />

        <TextView
            android:id="@+id/textTitlePhoneLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_span="1"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:text="@string/phone_line_card_title"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewPin"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewPin"
            android:layout_width="62dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_span="1"
            android:contentDescription="pin_icon"
            android:src="@drawable/phone_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>